have one source of truth for locale (in ModelSettings) fix tooltip clipping
Prior to this commit, locale was hanging out as an instance variable
in several view movels.  This meant changes to the locale from the
frontend had to be explicitly set across all those models instead
of at just one model.

With this commit, the settings model becomes /the/ holder of locale
state for the frontend.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,6 +144,10 @@ div.mdl-menu__container > ul > li
   /* max-width: 15.3125em; */
 }
 
+/* Tweak styling of tooltip here. */
+.mdl-tooltip.is-active {
+}
+
 .mdl-switch__track,
 .mdl-switch.is-checked .mdl-switch__track {
   /* Make priority card switch track standout more in enabled state. */
